当前后台系统模板

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 # serve 端口
-VUE_APP_PORT = 8088
+VUE_APP_SERVER_PORT = {{port}}
+
+# 是否在服务器已经启动后开启浏览器
+VUE_APP_SERVER_OPEN = {{open}}
 
 # 项目英文名称
-VUE_APP_NAME = 360-manager-H5
+VUE_APP_NAME = {{projectName}}
