--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "element-plus": "2.2.19",
         "@element-plus/icons-vue": "^2.0.10",
         "vuedraggable": "^4.1.0",
-        "mockjs": "^1.1.0"
+        "mockjs": "^1.1.0",
+        "cropperjs": "^1.5.13",
+        "quill": "^1.3.7"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
