--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,52 @@
 {
-    "prettier.tabWidth": 4,
-    "prettier.useTabs": false, // 缩进不使用tab，使用空格
+    "editor.formatOnSave": true,
+    "editor.formatOnType": false,
+    "editor.formatOnPaste": false,
     "editor.tabSize": 4,
     "editor.detectIndentation": false,
-    "editor.formatOnType": true,
-    "editor.formatOnSave": true
+    "prettier.tabWidth": 4,
+    "prettier.useTabs": false, // 缩进不使用tab，使用空格
+    "prettier.semi": true,
+    "prettier.singleQuote": false,
+    "prettier.quoteProps": "consistent",
+    // 启用ESLint作为已验证文件的格式化程序，可方便快捷键
+    "eslint.format.enable": true, 
+    // 每次保存的时候将代码按eslint格式进行修复
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "explicit"
+    },
+    "vetur.format.options.tabSize": 4,
+    "vetur.format.defaultFormatter.html": "js-beautify-html",
+    "vetur.format.defaultFormatter.js": "prettier",
+    "vetur.format.defaultFormatterOptions": {
+        "js-beautify-html": {
+            "wrap_line_length": 200,
+            "wrap_attributes": "auto",
+            "end_with_newline": false
+        }
+    },
+    "[vue]": {
+        "editor.defaultFormatter": "octref.vetur"
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[less]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[css]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
