--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "{{description}}",
     "author": "{{author}}",
     "scripts": {
+        "mserve": "cross-env MOCK_DATA=1 vue-cli-service serve --mode dev --copy",
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint"
@@ -14,12 +15,13 @@
         "vue-router": "^4.1.5",
         "axios": "^1.1.3",
         "dayjs": "^1.11.6",
-        "element-plus": "2.2.19",
+        "element-plus": "^2.2.19",
         "@element-plus/icons-vue": "^2.0.10",
         "vuedraggable": "^4.1.0",
         "mockjs": "^1.1.0",
         "cropperjs": "^1.5.13",
-        "quill": "^1.3.7"
+        "quill": "^1.3.7",
+        "clipboard": "^2.0.11"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
@@ -29,6 +31,7 @@
         "@vue/cli-service": "~5.0.8",
         "@vue/cli-plugin-router": "~5.0.8",
         "@vue/cli-plugin-vuex": "~5.0.8",
+        "@vue/eslint-config-prettier": "^7.1.0",
         "eslint": "^7.32.0",
         "eslint-plugin-vue": "^8.0.3",
         "eslint-config-prettier": "^8.5.0",
@@ -43,7 +46,8 @@
         "postcss": "^8.4.18",
         "postcss-html": "^1.5.0",
         "postcss-less": "^6.0.0",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "cross-env": "^7.0.3"
     },
     "prettier": {
         "tabWidth": 4,
