重构组件内容，优化组件样式

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # serve 端口
-VUE_APP_SERVER_PORT = {{port}}
+VUE_APP_SERVER_PORT = 8090
 
 # 是否在服务器已经启动后开启浏览器
-VUE_APP_SERVER_OPEN = {{open}}
+VUE_APP_SERVER_OPEN = false
 
 # 项目英文名称
-VUE_APP_NAME = {{projectName}}
+VUE_APP_NAME = qifu-cms-vuecli
