--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "{{projectName}}",
-    "description": "{{description}}",
-    "author": "{{author}}",
+    "name": "qifu-cms-vuecli",
+    "description": "qifu公司定制化、无菜单、多页",
+    "author": "jackyu",
     "scripts": {
         "mserve": "cross-env MOCK_DATA=1 vue-cli-service serve --mode dev --copy",
         "serve": "vue-cli-service serve",
@@ -9,23 +9,23 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "core-js": "^3.25.5",
-        "vue": "^3.2.41",
-        "pinia": "^2.0.23",
-        "vue-router": "^4.1.5",
-        "axios": "^1.1.3",
-        "dayjs": "^1.11.6",
-        "element-plus": "^2.2.19",
-        "@element-plus/icons-vue": "^2.0.10",
-        "vuedraggable": "^4.1.0",
+        "vue": "^3.5.18",
+        "pinia": "^3.0.3",
+        "vue-router": "^4.5.1",
+        "axios": "^1.11.0",
+        "@vueuse/core": "^13.6.0",
+        "element-plus": "^2.10.6",
+        "@element-plus/icons-vue": "^2.3.2",
         "mockjs": "^1.1.0",
         "cropperjs": "^1.5.13",
-        "quill": "^1.3.7",
-        "clipboard": "^2.0.11"
+        "quill": "^1.3.7"
     },
     "devDependencies": {
         "@babel/core": "^7.12.16",
         "@babel/eslint-parser": "^7.12.16",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+        "@babel/plugin-transform-optional-chaining": "^7.22.6",
         "@vue/cli-plugin-babel": "~5.0.8",
         "@vue/cli-plugin-eslint": "~5.0.8",
         "@vue/cli-service": "~5.0.8",
@@ -38,16 +38,18 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-standard": "^5.0.0",
+        "eslint-import-resolver-alias": "^1.1.2",
         "alphabetjs": "^0.1.4",
         "less": "^4.1.3",
         "less-loader": "^8.0.0",
-        "sass": "^1.50.0",
-        "sass-loader": "^12.6.0",
+        "sass": "^1.90.0",
+        "sass-loader": "^16.0.5",
         "postcss": "^8.4.18",
         "postcss-html": "^1.5.0",
         "postcss-less": "^6.0.0",
         "prettier": "^2.7.1",
-        "cross-env": "^7.0.3"
+        "cross-env": "^7.0.3",
+        "svg-sprite-loader": "^6.0.11"
     },
     "prettier": {
         "tabWidth": 4,
@@ -58,10 +60,11 @@
         "arrowParens": "avoid",
         "semi": true,
         "singleQuote": false,
-        "htmlWhitespaceSensitivity": "ignore"
+        "htmlWhitespaceSensitivity": "ignore",
+        "endOfLine": "crlf"
     },
     "engines": {
-        "node": ">=14"
+        "node": ">=18"
     },
     "lint-staged": {
         "src/**/*.{jsx,txs,ts,js,json,vue,md}": [
