--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
 # serve 端口
-VUE_APP_SERVER_PORT = 8090
+SERVER_PORT = 8090
 
 # 是否在服务器已经启动后开启浏览器
-VUE_APP_SERVER_OPEN = false
+SERVER_OPEN = false
+
+# 项目静态资源打包目录
+BUILD_STATIC_DIR = ../../08.test/static
+
+# 项目静态资源访问路径
+BUILD_BASE_PATH = /static
+
+# 项目HTML文件打包目录
+BUILD_HTML_DIR = ../../08.test/html
 
 # 项目英文名称
-VUE_APP_NAME = qifu-cms-vuecli
+VITE_APP_NAME = qifu-cms-vite
