--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-    "name": "qifu-cms-vuecli",
+    "name": "qifu-cms-vite",
     "description": "qifu公司定制化、无菜单、多页",
     "author": "jackyu",
     "scripts": {
-        "mserve": "cross-env MOCK_DATA=1 vue-cli-service serve --mode dev --copy",
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "mdev": "cross-env MOCK_DATA=1 vite --mode dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "format": "prettier --write \"**/*.{js,cjs,mjs,ts,tsx,json,css,scss,vue,html,md}\"",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix ."
     },
     "dependencies": {
         "vue": "^3.5.18",
@@ -18,38 +20,24 @@
         "@element-plus/icons-vue": "^2.3.2",
         "mockjs": "^1.1.0",
         "cropperjs": "^1.5.13",
-        "quill": "^1.3.7"
+        "quill": "^2.0.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.16",
-        "@babel/eslint-parser": "^7.12.16",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-        "@babel/plugin-transform-optional-chaining": "^7.22.6",
-        "@vue/cli-plugin-babel": "~5.0.8",
-        "@vue/cli-plugin-eslint": "~5.0.8",
-        "@vue/cli-service": "~5.0.8",
-        "@vue/cli-plugin-router": "~5.0.8",
-        "@vue/cli-plugin-vuex": "~5.0.8",
-        "@vue/eslint-config-prettier": "^7.1.0",
-        "eslint": "^7.32.0",
-        "eslint-plugin-vue": "^8.0.3",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-standard": "^5.0.0",
-        "eslint-import-resolver-alias": "^1.1.2",
-        "alphabetjs": "^0.1.4",
-        "less": "^4.1.3",
-        "less-loader": "^8.0.0",
-        "sass": "^1.90.0",
-        "sass-loader": "^16.0.5",
-        "postcss": "^8.4.18",
-        "postcss-html": "^1.5.0",
-        "postcss-less": "^6.0.0",
-        "prettier": "^2.7.1",
-        "cross-env": "^7.0.3",
-        "svg-sprite-loader": "^6.0.11"
+        "vite": "^7.1.2",
+        "vitest": "^3.2.4",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "@vitejs/plugin-vue-jsx": "^5.0.1",
+        "vite-svg-loader": "^5.1.0",
+        "sass": "1.90.0",
+        "prettier": "^3.6.2",
+        "eslint": "^9.33.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-vue": "^10.4.0",
+        "@vue/eslint-config-prettier": "^10.2.0",
+        "fast-glob": "^3.3.3",
+        "cross-env": "^10.0.0"
     },
     "prettier": {
         "tabWidth": 4,
@@ -61,21 +49,15 @@
         "semi": true,
         "singleQuote": false,
         "htmlWhitespaceSensitivity": "ignore",
+        "bracketSpacing": true,
         "endOfLine": "crlf"
     },
     "engines": {
-        "node": ">=18"
-    },
-    "lint-staged": {
-        "src/**/*.{jsx,txs,ts,js,json,vue,md}": [
-            "vue-cli-service lint",
-            "git add"
-        ]
+        "node": ">=22"
     },
     "browserslist": [
         "> 1%",
         "last 2 versions",
-        "not dead",
-        "not ie 11"
+        "not dead"
     ]
 }
