--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 # serve 端口
-VUE_APP_SERVER_PORT = 8090
+VUE_APP_SERVER_PORT = {{serverPort}}
 
 # 是否在服务器已经启动后开启浏览器
-VUE_APP_SERVER_OPEN = false
+VUE_APP_SERVER_OPEN = {{serverOpen}}
 
 # 项目静态资源打包目录(不要带上项目名会自动拼接，当前路径针对于项目根目录的相对路径)
-VUE_APP_BUILD_STATIC_DIR = ../../08.test/static
+VUE_APP_BUILD_STATIC_DIR = {{buildStaticDir}}
 
 # 项目静态资源访问路径(不要带上项目名会自动拼接)
-VUE_APP_BUILD_BASE_PATH = /static
+VUE_APP_BUILD_BASE_PATH = {{buildBasePath}}
 
 # 项目HTML文件打包目录(不要带上项目名会自动拼接，当前路径是针对于VUE_APP_BUILD_STATIC_DIR的相对路径，VUE_APP_BUILD_STATIC_DIR会自动拼接上项目名称路径这里要注意)
-VUE_APP_BUILD_HTML_DIR = ../../html
+VUE_APP_BUILD_HTML_DIR = {{buildHtmlDir}}
 
 # 项目英文名称
-VUE_APP_NAME = qifu-cms-vuecli
+VUE_APP_NAME = {{projectName}}
