配置项目模板变量

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 # serve 端口
-SERVER_PORT = 8090
+SERVER_PORT = {{serverPort}}
 
 # 是否在服务器已经启动后开启浏览器
-SERVER_OPEN = false
+SERVER_OPEN = {{serverOpen}}
 
 # 项目静态资源打包目录
-BUILD_STATIC_DIR = ../../08.test/static
+BUILD_STATIC_DIR = {{buildStaticDir}}
 
 # 项目静态资源访问路径
-BUILD_BASE_PATH = /static
+BUILD_BASE_PATH = {{buildBasePath}}
 
 # 项目HTML文件打包目录
-BUILD_HTML_DIR = ../../08.test/html
+BUILD_HTML_DIR = {{buildHtmlDir}}
 
 # 项目英文名称
-VITE_APP_NAME = qifu-cms-vite
+VITE_APP_NAME = {{projectName}}
