--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "qifu-cms-vite",
-    "description": "qifu公司定制化、无菜单、多页",
-    "author": "jackyu",
+    "name": "{{projectName}}",
+    "description": "{{projectDescription}}",
+    "author": "{{projectAuthor}}",
     "scripts": {
         "mdev": "cross-env MOCK_DATA=1 vite --mode dev",
         "dev": "vite --mode dev",
