--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "qifu-cms-vite",
     "description": "qifu公司定制化、无菜单、多页",
     "author": "jackyu",
+    "type": "module",
     "scripts": {
         "mdev": "cross-env MOCK_DATA=1 vite --mode dev",
         "dev": "vite --mode dev",
@@ -31,11 +32,15 @@
         "vite-svg-loader": "^5.1.0",
         "sass": "1.90.0",
         "prettier": "^3.6.2",
+        "globals": "^16.3.0",
         "eslint": "^9.33.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
-        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-import-x": "^4.16.1",
         "eslint-plugin-vue": "^10.4.0",
+        "eslint-plugin-jsonc": "^2.20.1",
+        "eslint-plugin-markdown": "^5.1.0",
+        "eslint-plugin-vitest": "^0.5.4",
         "@vue/eslint-config-prettier": "^10.2.0",
         "fast-glob": "^3.3.3",
         "cross-env": "^10.0.0"
