--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "cms-ts-main",
+    "name": "mid-platform-ts",
     "version": "0.1.0",
-    "description": "基于vite + vue3 + vue-router + pinia + element-plus + mockjs + typescript搭建的后台管理系统框架，风格：绿色、紧凑型",
+    "description": "基于vite + vue3 + vue-router + pinia + element-plus + mockjs + typescript搭建的中台单页系统，有导航菜单，支持多个子系统集成（IFRAME 嵌套引入），风格：绿色、紧凑型",
     "type": "module",
     "keywords": [
         "h5"
@@ -43,13 +43,17 @@
         "element-plus": "^2.10.3",
         "@element-plus/icons-vue": "^2.3.1",
         "echarts": "^5.6.0",
+        "qrcode": "^1.5.4",
         "monaco-editor": "^0.52.2",
         "@vueuse/core": "^13.5.0",
         "mockjs": "^1.1.0",
         "@yujinjin/utils": "^0.0.4",
-        "@yujinjin/cms-components": "0.0.2"
+        "@yujinjin/cms-components": "0.0.2",
+        "@better-scroll/core": "^2.5.1",
+        "@better-scroll/mouse-wheel": "^2.5.1"
     },
     "devDependencies": {
+        "alphabetjs": "^0.1.4",
         "vite": "^7.0.2",
         "vitest": "^3.2.4",
         "@vitejs/plugin-vue": "^6.0.0",
